bug: divider not showing in dropdown

--- a/demos/playground/src/index.css
+++ b/demos/playground/src/index.css
@@ -1445,7 +1445,7 @@ button.action-button:disabled {
   pointer-events: none;
 }
 
-.toolbar .divider {
+.toolbar > .divider { /* need '>' to avoid conflict with `.dropdown .divider` in svelte-lexical  */
   width: 1px;
   background-color: #eee;
   margin: 0 4px;
